force-app/main/default/objects/ICR_Approval__c.object
<CustomObject>
    <fields>
        <fullName>AMM_Conclusion__c</fullName>
        <label>AMM Conclusion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appoint</fullName>
                </value>
                <value>
                    <fullName>Disappoint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appointed_Disappointed_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>กรุณา Checked เมื่ออัพโหลดเอกสาร Appointed หรือ Disappoint ผลมติการประชุม</inlineHelpText>
        <label>Appointed/Disappointed File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <formula>Approver__r.FirstName_EN__c + &apos; &apos; + Approver__r.LastName_EN__c</formula>
        <label>Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ICR_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ask_to_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask to Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BE_EVP_ID__c</fullName>
        <label>BE EVP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_File_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BE File Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BE_GSCS_ID__c</fullName>
        <label>BE GSCS ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_GSCS_Staff_ID__c</fullName>
        <label>BE GSCS Staff ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_GSVP_ID__c</fullName>
        <label>BE GSVP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_Line_Manager_ID__c</fullName>
        <label>BE Line Manager ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_PMSV_ID__c</fullName>
        <label>BE PMSV ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circular_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>กรุณา Checked เมื่อได้ทำการอัพโหลดเอกสาร Circular หลังมติการประชุม</inlineHelpText>
        <label>Circular File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circular_No__c</fullName>
        <label>Circular No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circular_Template__c</fullName>
        <defaultValue>&quot;https://thaioil.my.salesforce.com/sfc/p/2v000003OMdM/a/2v0000009u0w/J7_xaYHzQ3b.jjjdanWUzxYt_AjZgBysV9Pp_fjJA9E&quot;</defaultValue>
        <label>Circular Template</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Committee_Title__c</fullName>
        <label>Committee Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Draft_Circular_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>กรุณา Checked เมื่อทำการอัพโหลดเอกสาร Draft of Circular</inlineHelpText>
        <label>Draft Circular File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EVP_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EVP Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <formula>Owner:User.Employee_Id__c</formula>
        <label>Employee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Wording__c</fullName>
        <formula>IF( ISBLANK(End_Date__c) , &apos;จนกว่าจะมีคำสั่งเปลี่ยนแปลง&apos; , &apos;จะเป็นไปตามที่กำหนดข้างต้น&apos; )</formula>
        <label>End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>วันสิ้นสุ</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_URL__c</fullName>
        <label>File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Finished_Date__c</fullName>
        <label>Finished Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <inlineHelpText>จุดประสงค์ของการทำ ICR ในครั้งนี้</inlineHelpText>
        <label>Committee Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name__c</fullName>
        <formula>Owner:User.FirstName_EN__c + &apos; &apos; + Owner:User.LastName_EN__c</formula>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>หมายเหตุ</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Reason__c</fullName>
        <label>Request Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <formula>Owner:User.FirstName_EN__c + &apos; &apos; +  Owner:User.LastName_EN__c</formula>
        <label>Requester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_Circular_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>กรุณา Checked เมื่อทำการอัพโหลดเอกสาร Signed Circular</inlineHelpText>
        <label>Signed Circular File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>วันเริ่มต้น</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submit</fullName>
                    <default>true</default>
                    <label>Not Submit</label>
                </value>
                <value>
                    <fullName>Waiting Requester Revise</fullName>
                </value>
                <value>
                    <fullName>Waiting Line Manager Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting Submit Approval Type</fullName>
                </value>
                <value>
                    <fullName>Waiting GSCS Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting Requester Update Result</fullName>
                </value>
                <value>
                    <fullName>Waiting EVP Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting Circular No.</fullName>
                </value>
                <value>
                    <fullName>Waiting Signed Circular File</fullName>
                </value>
                <value>
                    <fullName>Cancelled Request</fullName>
                </value>
                <value>
                    <fullName>Appointed</fullName>
                </value>
                <value>
                    <fullName>Disappointed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>TODAY()</formula>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_Remark__c</fullName>
        <inlineHelpText>หมายเหตุในการเลือก Approval Type</inlineHelpText>
        <label>Reason for select type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMM</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ICR Approval</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Request</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Request</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{000}</displayFormat>
        <label>Document No</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>AMM_Circular</fullName>
        <active>true</active>
        <label>AMM Circular</label>
    </recordTypes>
    <recordTypes>
        <fullName>AMM_Signed_Circular</fullName>
        <active>true</active>
        <label>AMM Signed Circular</label>
    </recordTypes>
    <recordTypes>
        <fullName>AMM_Type</fullName>
        <active>true</active>
        <label>AMM Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Type</fullName>
        <active>true</active>
        <label>Approval Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>CEO_Circular</fullName>
        <active>true</active>
        <label>CEO Circular</label>
    </recordTypes>
    <recordTypes>
        <fullName>CEO_Signed_Circular</fullName>
        <active>true</active>
        <label>CEO Signed Circular</label>
    </recordTypes>
    <recordTypes>
        <fullName>CEO_Type</fullName>
        <active>true</active>
        <label>CEO Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Completed</fullName>
        <active>true</active>
        <label>Completed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request</fullName>
        <active>true</active>
        <label>Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_AMM_Appoint_Disappoint_File</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Type__c, &quot;AMM&quot;), ISPICKVAL(AMM_Conclusion__c, &quot;Appoint&quot;), Appointed_Disappointed_File__c = false, ISPICKVAL(Status__c, &quot;Waiting Requester Update Result&quot;))</errorConditionFormula>
        <errorDisplayField>Appointed_Disappointed_File__c</errorDisplayField>
        <errorMessage>Appointed/Disappointed File need to be uploaded and checked if AMM Conclusion is &quot;Appoint&quot; .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_AMM_Circular_File</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Type__c, &quot;AMM&quot;), ISPICKVAL(AMM_Conclusion__c, &quot;Appoint&quot;), Circular_File__c = false, ISPICKVAL(Status__c, &quot;Waiting Requester Update Result&quot;))</errorConditionFormula>
        <errorDisplayField>Circular_File__c</errorDisplayField>
        <errorMessage>Circular File need to be check.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_AMM_Conclusion_Disappoint</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(AMM_Conclusion__c, &quot;Disappoint&quot;),  Appointed_Disappointed_File__c = false)</errorConditionFormula>
        <errorDisplayField>Appointed_Disappointed_File__c</errorDisplayField>
        <errorMessage>Appointed/Disappointed File need to be uploaded and checked if AMM Conclusion is &quot;Disappoint&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_AMM_EVP_Approved</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Type__c, &quot;AMM&quot;), ISPICKVAL(AMM_Conclusion__c, &quot;Appoint&quot;), EVP_Approved__c = false, ISPICKVAL(Status__c, &quot;Waiting Requester Update Result&quot;))</errorConditionFormula>
        <errorDisplayField>EVP_Approved__c</errorDisplayField>
        <errorMessage>EVP Approved need to be checked if AMM Conclusion is &quot;Appoint&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_AMM_Signed_Circular_File</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Type__c, &quot;AMM&quot;), ISPICKVAL(Status__c, &quot;Waiting Signed Circular File&quot;), NOT(ISBLANK(Circular_No__c)), Signed_Circular_File__c = false)</errorConditionFormula>
        <errorDisplayField>Signed_Circular_File__c</errorDisplayField>
        <errorMessage>Signed Circular File need to be check, if Circular No is filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_CEO_Circular_File</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Type__c, &quot;CEO&quot;),  Circular_File__c = false, ISPICKVAL(Status__c, &quot;Waiting Requester Update Result&quot;))</errorConditionFormula>
        <errorDisplayField>Circular_File__c</errorDisplayField>
        <errorMessage>Circular File need to be check.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_CEO_EVP_Approved</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Type__c, &quot;CEO&quot;), EVP_Approved__c = false, ISPICKVAL(Status__c, &quot;Waiting Requester Update Result&quot;))</errorConditionFormula>
        <errorDisplayField>EVP_Approved__c</errorDisplayField>
        <errorMessage>EVP Approved need to be checked when Status is &quot;Waiting Requester Update Result&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_CEO_Signed_Circular_File</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Type__c, &quot;CEO&quot;), ISPICKVAL(Status__c, &quot;Waiting Signed Circular File&quot;), NOT(ISBLANK(Circular_No__c)), Signed_Circular_File__c = false)</errorConditionFormula>
        <errorDisplayField>Signed_Circular_File__c</errorDisplayField>
        <errorMessage>Signed Circular File need to be check, if status is &apos;Appointed&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Circular_No</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
AND(ISPICKVAL(Status__c,&apos;Waiting Circular No.&apos;),ISBLANK(Circular_No__c))
,
AND(ISPICKVAL(Status__c,&apos;Waiting Signed Circular File&apos;),ISBLANK(Circular_No__c))
)</errorConditionFormula>
        <errorDisplayField>Circular_No__c</errorDisplayField>
        <errorMessage>Please enter Circular No before Save</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_End_Date_with_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Please check your &quot;End Date&quot;. End Date should not less than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Reason_Require</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(OR
(ISPICKVAL(Type__c, &apos;Other&apos;), ISPICKVAL(Type__c, &apos;CEO&apos;)) ,ISBLANK(Type_Remark__c) )</errorConditionFormula>
        <errorDisplayField>Type_Remark__c</errorDisplayField>
        <errorMessage>กรุณากรอกหมายเหตุ ถ้าเลือก Type เป็น CEO หรือ อื่นๆ</errorMessage>
    </validationRules>
</CustomObject>